--- a/food-app/templates/recipe_update.html
+++ b/food-app/templates/recipe_update.html
@@ -1,223 +1,50 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    </head>
-<body>
+{% extends "base.html" %}
+{% block body %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}" />
 <script src="static/request_helpers.js" type="text/javascript"></script>
-
-<script>
-//Makes the get request that pulls list of recipes
-function load_data(data){
-  var g = document.getElementById("item_list")
-  data = data['data']
-  for (var x in data) {
-      var i = document.createElement("option"); //input element, text
-      i.textContent = data[x]['Recipe_Name'];
-      i.value = data[x]['Recipe_Name']
-      g.appendChild(i);
-  }
-};
-
-//Fills recipe selected (calls create table)
-function fill_selection(){
-  selection = document.getElementById('item_list').value
-  var hidden = document.getElementById('hidden_input');
-  if (selection == "New Recipe"){
-    hidden.type = 'text';
-    var table = document.getElementById('recipe_table');
-    while(table.rows.length > 1) {
-      table.deleteRow(-1);
-    }
-    addRow();
-  }
-  else {
-    hidden.type = 'hidden';
-    ulr_str = "/recipes?recipe=" + selection
-    make_request(ulr_str,createTable);
-  }
-};
-</script>
-
+<script src="static/recipe_funcs.js" type="text/javascript"></script>
 <script>window.onload = make_request("/recipes", load_data);</script>
 
-<script>
-//Builds the table containing the recipe
-function createTable(tableData) {
-  //Converts JSON to multidimensional araray
-  tableData = tableData['data']
-  var outputData = [];
-  for(var i = 0; i < tableData.length; i++) {
-      var input = tableData[i];
-      outputData.push([input.Food_Name, input.Food_Units,input.Food_Units_Name,input.Food_Alt_Units,input.Food_Alt_Name]);
-  }
-  //Adds data to table
-  var table = document.getElementById('recipe_table')
-  while(table.rows.length > 1) {
-  table.deleteRow(-1);
-  }
-  var tableBody = load_table(outputData)
-  table.appendChild(tableBody);
-};
-</script>
+<div class="content">
+  <div class="content">
+    <form onchange="return fill_selection()">
+      <select id="item_list">
+        <option value="Please Select a Recipe">Please Select a Recipe</option>
+        <option value="New Recipe">New Recipe</option>
+      </select>
+    </form>
+  </div>
 
-<script type="text/javascript">
-//Called when button clicked, will create the item list if it doesn't exist, else just adds a row. 
-function addRow(){
-  var table = document.getElementById('recipe_table');
-  var n_rows = table.rows.length;
+  <div id='hidden'>
+    <input type='hidden' id='hidden_input'>
+  </div>
 
-  var exist = document.getElementById('item')
-  if (exist == null) {
-      make_request("/items",fill_data);
-      var row = table.insertRow(-1);
-  }
-  else { var row = table.insertRow(n_rows-1);}
+  <form id='recipe_form' onsubmit="return post_recipe_request()">
+    <table id='recipe_table'>
+    <tr>
+      <th>Food Name</th>
+      <th>Food Units</th>
+      <th>Food Units Name</th>
+      <th>Food Alt Units</th>
+      <th>Food Alt Name</th>
+    </tr>
+    <tbody>
+        <tr>
+        <td><INPUT TYPE="TEXT" NAME="Food_Name" SIZE="20" id='fn'></td>
+        <td><INPUT TYPE="TEXT" NAME="Food_Units" SIZE="20" id='fu'></td>
+        <td><INPUT TYPE="TEXT" NAME="Food_Units_Name" SIZE="20" id='fun'></td>
+        <td><INPUT TYPE="TEXT" NAME="Food_Alt_Units" SIZE="20" id='fau'></td>
+        <td><INPUT TYPE="TEXT" NAME="Food_Alt_Name" SIZE="20" id='fan'></td>
+        </tr>
+    </tbody>
+    </table>
+  </form>
 
-  var i = 0
-  while (i < table.rows[0].cells.length) {
-    var cell = document.createElement('td');
-    var text = document.createElement('input');
-    text.setAttribute('type', 'text')
-    text.setAttribute('id',"cell" + i.toString()); //This is new
-    cell.appendChild(text)
-    row.appendChild(cell)
-    i++;
-  }
-};
-
-//Fills the list of food items. 
-function fill_data(data){
-  var table = document.getElementById('recipe_table');
-  var n_rows = table.rows.length;
-  var row = table.insertRow(n_rows);
-  var cell = document.createElement('td');
-  var f = document.createElement("form");
-  f.setAttribute('onchange', "return fill_item()");
-  var g = document.createElement("select");
-  g.setAttribute('id',"item");
-  f.appendChild(g)
-  cell.appendChild(f)
-  row.appendChild(cell)
-
-  var def = document.createElement("option");
-  def.value = "Please Select an Item";
-  def.textContent = "Please Select an Item";
-  g.appendChild(def)
-
-  data = data['data']
-  for (var x in data) {
-    var i = document.createElement("option"); //input element, text
-    i.textContent = data[x]['Food_Name']
-    i.value = data[x]['Food_Name']
-    g.appendChild(i)
-  }
-};
-
-function fill_item(){
-  selection = document.getElementById('item').value
-  ulr_str = "/items?item=" + selection
-  make_request(ulr_str,fillz);
-};
-
-//Fills the food item details when the item is selected
-function fillz(data){
-  var data = data['data'][0]
-  var dta = document.getElementsByTagName('tr');
-  n_rows = dta.length;
-  var inp = dta[n_rows-2].getElementsByTagName('input');
-  inp[0].value = data['Food_Name'];
-  inp[2].value = data['Name_Cooking_Unit'];
-};
-</script>
-
-<script type="text/javascript">
-
-//Sends the recipe to the API
-function post_request(){
-  var array = [];
-  var headers = [];
-  $('#recipe_table th').each(function(index, item) {
-      headers[index] = $(item).html();
-  });
-  $('#recipe_table tr').has('td').each(function() {
-      var arrayItem = {};
-      $('td', $(this)).each(function(index, item) {
-          arrayItem[headers[index]] = $(item).find('input').val()
-      });
-      array.push(arrayItem);
-  });
-
-  var e = document.getElementById("item_list");
-  var hidden = document.getElementById('hidden_input');
-  if (e.value == "New Recipe"){
-    var recipe_name = hidden.value;
-    console.log(recipe_name);
-  }
-  else { var recipe_name = e.value;}
-
-
-  for(var i = 0; i < array.length; i++) {
-    var item = array[i]
-    item['Recipe_Name'] = recipe_name
-  }
-
-  var data = JSON.stringify(array);
-
-  url = "/recipes"
-
-  var xhr = createCORSRequest('POST', url);
-  if (!xhr) {
-    throw new Error('CORS not supported');
-  }
-
-  xhr.setRequestHeader("Content-type", "application/json");
-
-  xhr.onerror = function() {console.log('There was an error!');};
-
-  console.log(data)
-  xhr.send(data);
-  //post_request(url, data);
-  return false;
-};
-</script>
-
-<div id="list">
-<form onchange="return fill_selection()">
-  <select id="item_list">
-    <option value="Please Select a Recipe">Please Select a Recipe</option>
-    <option value="New Recipe">New Recipe</option>
-  </select>
-</form>
-
+  <div class="content">
+    <input id="clickMe" type="button" class="btn_small" value="Add Row" onclick="addRow();">
+  </div>
+  <div class="content">
+    <input form ="recipe_form" type="submit" class="btn_small" value="Submit">
+  </div>
 </div>
-<div id='hidden'>
-<input type='hidden' id='hidden_input'>
-</div>
-<form id='recipe_form' onsubmit="return post_request()">
-  <table id='recipe_table'>
-  <tr>
-    <th>Food Name</th>
-    <th>Food Units</th>
-    <th>Food Units Name</th>
-    <th>Food Alt Units</th>
-    <th>Food Alt Name</th>
-  </tr>
-  <tbody>
-      <tr>
-      <td><INPUT TYPE="TEXT" NAME="Food_Name" SIZE="20" id='fn'></td>
-      <td><INPUT TYPE="TEXT" NAME="Food_Units" SIZE="20" id='fu'></td>
-      <td><INPUT TYPE="TEXT" NAME="Food_Units_Name" SIZE="20" id='fun'></td>
-      <td><INPUT TYPE="TEXT" NAME="Food_Alt_Units" SIZE="20" id='fau'></td>
-      <td><INPUT TYPE="TEXT" NAME="Food_Alt_Name" SIZE="20" id='fan'></td>
-      </tr>
-  </tbody>
-  </table>
-  <input type="submit" value="Submit">
-  <br/>
-</form>
-
-<input id="clickMe" type="button" value="Add Row" onclick="addRow();" />
-
-</body>
-</html>
+{% endblock %}
