--- a/food-app/static/styles.css
+++ b/food-app/static/styles.css
@@ -48,7 +48,7 @@ table {
     font-weight: bold;
     table-layout: auto;
     border-spacing: 0px;
-    padding: 20px;
+    padding: 0px;
     margin: 0px;
     display: block;
     vertical-align: bottom;
@@ -57,7 +57,7 @@ table {
 
 td, th {
     border: 1px solid #ddd;
-    padding: 3px;
+    padding: 0px;
     margin: 0px;
     font-size: 14px;
 }
@@ -70,7 +70,7 @@ tr:hover {background-color: #ddd;}
 #grocery_table th {
     padding-top: 8px;
     padding-bottom: 8px;
-    text-align: left;
+    text-align: center;
     background-color: #008CBA; 
     border-radius: 6px;
     color: white;
