--- a/food-app/static/styles.css
+++ b/food-app/static/styles.css
@@ -8,7 +8,7 @@ input[type=button], input[type=submit] {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     border: 2px solid #008CBA;
-    margin: 8px;
+    margin: 20px;
 }
 
 .btn {
@@ -80,6 +80,10 @@ tr:hover {background-color: #ddd;}
 
 #item_table {border-collapse: separate;}
 
+#item_table td {
+    padding: 4px;
+}
+
 .heading {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     font-size: 24px;
@@ -103,6 +107,7 @@ input[type=email] {
 select {
     padding: 4px; 
     border: 1px solid #ccc;
+    margin: 2px 0px 20px;
     background-color: transparent;
 }
 
