--- a/food-app/templates/item_update.html
+++ b/food-app/templates/item_update.html
@@ -8,6 +8,10 @@
 <div class='content'>
 
   <div class='content'>
+    <h1>Food Items</h1>
+  </div>
+
+  <div class='content'>
   <form onchange="return fill_selection()">
     <select id="item_list">
       <option value="Please Select an Item">Please Select an Item</option>
