--- a/food-app/templates/grocery_list.html
+++ b/food-app/templates/grocery_list.html
@@ -61,7 +61,7 @@
       </div>
 
       <div id="ListButtons" class=content>
-        <input id="clickMe" type="button" class="btn" value="Add Row" onclick="addRow();" />
+        <input id="addRowBtn" type="button" class="btn" value="Add Row" onclick="addRow();" />
         <!--<input id="clickMe" type="button" value="Sort Grocery List" onclick="sortTable();" />-->
       </div>
 
