--- a/food-app/templates/base.html
+++ b/food-app/templates/base.html
@@ -69,7 +69,7 @@
             <div id="footerblurb">
                 <div id="footerblurb-inner">
                     <h2><span>Heading</span></h2>
-                    <p><script>generateText(2)</script></p>
+                    <p>Here is the footer text, very interesting stuff.</p>
                     <div class="clr"></div>
                 </div>
             </div>
